<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rvFoodSinfleRow"
    android:layout_width="match_parent"
    android:layout_height="165dp"
    android:background="#E2F7FA">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintSingleRow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/meal_rv_single_row"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/vIconaInfo"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/icon_info_24"
            android:clickable="true"
            android:focusable="auto"
            app:layout_constraintBottom_toBottomOf="@+id/tvcalValueMeal"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvCalMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/calVal_SingleRow"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvcalValueMeal"
            app:layout_constraintStart_toEndOf="@+id/tvcalValueMeal" />

        <TextView
            android:id="@+id/tvcalValueMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_mono_medium"
            android:text="@string/num_hundred"
            android:textColor="@color/black"
            android:textSize="47sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vIcona" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="226dp" />

        <View
            android:id="@+id/vIcona"
            android:layout_width="27dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/meal_icon2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMealName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="-5dp"
            android:text="@string/mealName_SingleRow"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/vIcona"
            app:layout_constraintStart_toEndOf="@+id/vIcona" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/time_SingleRow"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvMealName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvMealName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewLinija2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shapemoj"
        android:backgroundTint="#01ACC3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>