<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintHorizontal_bias="1"
    tools:context=".food.FoodLibrary">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myRVFood"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLinijaFoodL"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintTopZeleni"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="#E2F7FA"
        android:elevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnAddFood"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/addfoodlibrary"
            android:elevation="8dp"
            android:text="@string/Add_Food"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:letterSpacing="0.05"
            android:text="@string/All_values_are"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvMyFridge3"
            app:layout_constraintTop_toBottomOf="@+id/tvMyFridge3" />

        <TextView
            android:id="@+id/tvMyFridge3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.07"
            android:text="@string/Food_Library"
            android:textColor="#00BD17"
            android:textSize="36sp"
            android:textStyle="normal|bold"
            android:translationZ="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewLinijaFoodL"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="#00BCD4"
        android:elevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintTopZeleni" />

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/closebtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>